--- a/ZenCat-Front-Admin/src/index.css
+++ b/ZenCat-Front-Admin/src/index.css
@@ -1,5 +1,25 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+@import "@fontsource/montserrat";
+@import "@fontsource/montserrat/100.css";
+@import "@fontsource/montserrat/200.css";
+@import "@fontsource/montserrat/300.css";
+@import "@fontsource/montserrat/400.css";
+@import "@fontsource/montserrat/500.css";
+@import "@fontsource/montserrat/600.css";
+@import "@fontsource/montserrat/700.css";
+@import "@fontsource/montserrat/800.css";
+@import "@fontsource/montserrat/900.css";
+@import "@fontsource/montserrat/100-italic.css";
+@import "@fontsource/montserrat/200-italic.css";
+@import "@fontsource/montserrat/300-italic.css";
+@import "@fontsource/montserrat/400-italic.css";
+@import "@fontsource/montserrat/500-italic.css";
+@import "@fontsource/montserrat/600-italic.css";
+@import "@fontsource/montserrat/700-italic.css";
+@import "@fontsource/montserrat/800-italic.css";
+@import "@fontsource/montserrat/900-italic.css";
+
 
 @custom-variant dark (&:is(.dark *));
 
@@ -117,5 +137,9 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.font-montserrat {
+  font-family: "Montserrat";
 }
 
