--- a/ZenCat-Front-Admin/src/styles/custom/login.css
+++ b/ZenCat-Front-Admin/src/styles/custom/login.css
@@ -1,5 +1,18 @@
 .login-background {
-    background-image: url('../../images/login-background.png');
-    background-size: contain;
+    background-image: url('@/images/login-background.png');
     background-repeat: repeat;
+    background-size: auto;
+}
+
+@keyframes scroll-right {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: 1500px 0; 
+  }
+}
+
+.animate-scroll-right {
+  animation: scroll-right 30s linear infinite;
 }   
